--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           <span>Responsive</span>
           <span>HTML/CSS/JS</span>
         </div>
-        <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
+        <a href="https://github.com/Taffazzul-Bin-Azam/MyPortfolio-Website" target="_blank"><i class="bx bx-link-external"></i></a>
       </div>
     </div>
 
