--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           the diverse range of my skills and interests.<br> 
           I am a Full Stack Developer passionate about crafting efficient, scalable, and user-focused applications. Skilled in both front-end and back-end development, with experience across diverse technologies and frameworks. Driven by curiosity and continuous learning, I enjoy tackling complex challenges, collaborating with teams, and delivering impactful digital solutions. <br>Experienced in end-to-end 
           growth.
-          development and committed to leveraging technical expertise to drive organizational success and personal 
+          development and committed to leveraging technical expertise to drive organizational success and personal growth.
         </p>
         <div class="social-media">
           <a href="https://github.com/Taffazzul-Bin-Azam"><i class="bx bxl-github"></i></a>
