--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           the diverse range of my skills and interests.<br> 
           I am a Full Stack Developer passionate about crafting efficient, scalable, and user-focused applications. Skilled in both front-end and back-end development, with experience across diverse technologies and frameworks. Driven by curiosity and continuous learning, I enjoy tackling complex challenges, collaborating with teams, and delivering impactful digital solutions. <br>Experienced in end-to-end 
           growth.
-          development and committed to leveraging technical expertise to drive organizational success and personal growth.
+          development and committed to leveraging technical expertise to drive organizational success and personal 
         </p>
         <div class="social-media">
           <a href="https://github.com/Taffazzul-Bin-Azam"><i class="bx bxl-github"></i></a>
@@ -158,7 +158,7 @@
    <!-- projects -->
 
 <section class="projects" id="projects">
-  <h2 class="heading">Latest <span>Projects</span></h2>
+  <h2 class="heading">My <span>Projects</span></h2>
 
   <div class="projects-container">
     <!-- Project 1 -->
@@ -199,7 +199,7 @@
           <span>Responsive</span>
           <span>HTML/CSS/JS</span>
         </div>
-        <a href="https://github.com/Taffazzul-Bin-Azam/MyPortfolio-Website" target="_blank"><i class="bx bx-link-external"></i></a>
+        <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
       </div>
     </div>
 
@@ -250,24 +250,27 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
 
-      <form action="mailto:varunmg2102@gmail.com" method="post" enctype="text/plain">
-        <div class="input-box">
-          <input type="text" placeholder="Full Name" />
-          <input type="email" placeholder="Email Address" />
-        </div>
-        <div class="input-box">
-          <input type="number" placeholder="Mobile Number" />
-          <input type="text" placeholder="Email Subject" />
-        </div>
-        <textarea
-          name=""
-          id=""
-          cols="30"
-          rows="10"
-          placeholder="Your Message"
-        ></textarea>
-        <input type="submit" value="Send Message" class="btn" />
-      </form>
+     <form id="contact-form">
+  <div class="input-box">
+    <input type="text" name="from_name" placeholder="Full Name" required />
+    <input type="email" name="from_email" placeholder="Email Address" required />
+  </div>
+  <div class="input-box">
+    <input type="number" name="phone" placeholder="Mobile Number" />
+    <input type="text" name="subject" placeholder="Email Subject" />
+  </div>
+  <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
+  <input type="submit" value="Send Message" class="btn" />
+</form>
+
+<!-- EmailJS SDK -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  (function(){
+      emailjs.init("CSyh49KNQOOxNhluu"); // <-- replace with your EmailJS Public Key
+  })();
+</script>
+
     </section>
 
     <!-- footer -->
