--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <a href="#"><i class="bx bxl-instagram"></i></a>
           
         </div>
-        <a href="assets/cv.pdf" class="btn">Download CV</a>
+        <a href="assets/Taffazzul Bin Azam_Resume.pdf" class="btn">Download CV</a>
       </div>
 
       <div class="home-img">
