--- a/index.html
+++ b/index.html
@@ -205,12 +205,13 @@
 
     <!-- Project 4 -->
     <div class="project-card">
-      <img src="images/port4.png" alt="Calculator App" />
+      <img src="images/port7.png" alt="Todo App" />
       <div class="project-content">
-        <h3>Calculator</h3>
+        <h3>Todo Web App</h3>
         <div class="tags">
-          <span>JavaScript</span>
+          <span>ReactJS</span>
           <span>Frontend</span>
+           <span>Tailwind CSS</span>
         </div>
         <a href="https://github.com/Taffazzul-Bin-Azam/Calculator" target="_blank"><i class="bx bx-link-external"></i></a>
       </div>
