--- a/index.html
+++ b/index.html
@@ -234,12 +234,13 @@
     <div class="project-card">
       <img src="images/port6.png" alt="Dice Snake Game" />
       <div class="project-content">
-        <h3>Dice Snake Game</h3>
+        <h3>Weather App</h3>
         <div class="tags">
-          <span>JavaScript</span>
-          <span>Game</span>
+          <span>ReactJS</span>
+          <span>Frontend</span>
+          <span>Tailwind CSS</span>
         </div>
-        <a href="https://github.com/Taffazzul-Bin-Azam/Dice_Snake_Game" target="_blank"><i class="bx bx-link-external"></i></a>
+        <a href="https://github.com/Taffazzul-Bin-Azam/Weather-App" target="_blank"><i class="bx bx-link-external"></i></a>
       </div>
     </div>
   </div>
